# aiplex

./: .env.example  .gitignore  .goreleaser.yaml  .mise.toml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  install.sh  setup.sh
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
authz/: Cargo.toml  Dockerfile  README.md
authz/src/: main.rs
cmd/aiplex-api/: main.go
console/: Dockerfile  embed.go  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
design/: 00-overview.md  01-architecture-request-flow.md  02-auth-keycloak.md  03-opa-policy.md  04-envoy-gateway-routing.md  05-identity-zero-trust.md  06-deploy-engine.md  07-catalog-federation.md  08-data-model-firestore.md  09-console-ui.md  10-observability.md  11-api-design.md  12-security-model.md  13-developer-experience.md  14-performance-architecture.md  15-auth-alternatives-keycloak-rethink.md  16-delightful-onboarding.md  17-seamless-platform-bootstrap.md  18-capability-mesh.md  19-capability-route-crd.md  20-memplex-memory-plane.md  21-runtime-consent-and-trust-ledger.md  22-roadmap-100x.md  23-elegance-vs-state-of-art.md  24-agent-and-workflow-as-cap.md  25-the-problem-we-solve.md  26-sandbox-and-snapshots.md
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
examples/: durable-tape-runtime.yaml  llm-routing.yaml  mcplex-only.yaml  multi-agent.yaml  quickstart.json  quickstart.yaml
policies/: aiplex_authz.rego  aiplex_authz_test.rego
tests/: aiplex_tape_e2e_test.go  integration_test.go
(+275 files in other folders)
